[package]
name = "note-gen"
version = "0.13.7"
description = "A Tauri App"
authors = ["codexu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "=1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
xcap = "=0.0.14"
chrono = "=0.4.38"
tauri-plugin-clipboard = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2.2.0", features = ["unsafe-headers"] }
tauri-plugin-os = "2"
reqwest_dav = "=0.2.1"
urlencoding = "2.1.3"
percent-encoding = "2.3.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
